--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-    "name": "barcode_scanner_pwa",
-    "short_name": "barcode_scanner_pwa",
+    "name": "experimental",
+    "short_name": "experimental",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
     "theme_color": "#0175C2",
-    "description": "A new Flutter project.",
+    "description": "Flutter project for testing differenet features and widgets",
     "orientation": "portrait-primary",
     "prefer_related_applications": false,
     "icons": [
